@@ -23,6 +23,7 @@
 - fixed saving files in `FILESTORAGE()` in OS Windows
 - fixed sending nullable data in the FlowStream
 - fixed handling messages in `instance.message_<INPUT_NAME>` in the FlowStream
+- fixed using `require()` in the components in the FlowStream
 
 ========================
 0.0.45
